--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,31 +1,30 @@
-name: monero
+name: bittube
 version: 0.11.1.0-1
-summary: "Monero: the secure, private, untraceable cryptocurrency https://getmonero.org"
+summary: "BitTube is a revolutionary video platform in which publishers can make money with their content, without ads. https://coin.bit.tube"
 description: |
-    Monero is a private, secure, untraceable, decentralised digital currency.
-    You are your bank, you control your funds, and nobody can trace your transfers
-    unless you allow them to do so.
+    BitTube coin is a digital cryptocurrency. Initially, at the genesis of the BitTube blockchain, the maximum number of coins minable is set to 1 billion coins.
+    Revenues from co-mining are passed on to the viewers and on to the copyright holders as content is consumed on the platform.
 grade: devel
 confinement: strict
 
 apps:
-    monerod:
+    bittubed:
         daemon: forking
         command: |
-          monerod-wrapper --detach --data-dir ${SNAP_COMMON} --config-file ${SNAP_USER_DATA}/etc/monerod.conf
+          bittubed-wrapper --detach --data-dir ${SNAP_COMMON} --config-file ${SNAP_USER_DATA}/etc/bittubed.conf
         plugs:
             - network
             - network-bind
-    monero-wallet-rpc:
+    bittube-wallet-rpc:
         command: |
-          monero-wallet-rpc --log-file ${SNAP_USER_DATA}
+          bittube-wallet-rpc --log-file ${SNAP_USER_DATA}
         plugs:
             - home
             - network
             - network-bind
-    monero-wallet-cli:
+    bittube-wallet-cli:
         command: |
-          monero-wallet-cli --log-file ${SNAP_USER_DATA}
+          bittube-wallet-cli --log-file ${SNAP_USER_DATA}
         plugs:
             - home
             - network
@@ -71,8 +70,8 @@ parts:
         plugin: dump
         source: .
         organize:
-            contrib/snap/monerod.conf: etc/monerod.conf
-            contrib/snap/monerod-wrapper: bin/monerod-wrapper
+            contrib/snap/bittubed.conf: etc/bittubed.conf
+            contrib/snap/bittubed-wrapper: bin/bittubed-wrapper
         prime:
             - etc
             - bin
