--- a/utils/systemd/bittubed.conf
+++ b/utils/systemd/bittubed.conf
@@ -1,33 +1,33 @@
 [Unit]
-Description=Monero Full Node
+Description=BitTube Full Node
 After=network.target
 
 [Service]
-User=monero
-Group=monero
+User=bittube
+Group=bittube
 WorkingDirectory=~
-RuntimeDirectory=monero
+RuntimeDirectory=bittube
 
 # Clearnet config
 #
 Type=forking
-PIDFile=/run/monero/monerod.pid
-ExecStart=/usr/bin/monerod --config-file /etc/monerod.conf \
-    --detach --pidfile /run/monero/monerod.pid
+PIDFile=/run/bittube/bittubed.pid
+ExecStart=/usr/bin/bittubed --config-file /etc/bittubed.conf \
+    --detach --pidfile /run/bittube/bittubed.pid
 
 # Tor config
 #
 ## We have to use simple, not forking, because we cannot pass --detach
 ## because stderr/stdout is not available when detached, but torsocks
 ## attempts to write to it, and fails with 'invalid argument', causing
-## monerod to fail.
+## bittubed to fail.
 #Type=simple
 #Environment=DNS_PUBLIC=tcp
 ## The following is needed only when accessing wallet from a different
 ## host in the LAN, VPN, etc, the RPC must bind to 0.0.0.0, but
 ## by default torsocks only allows binding to localhost.
 #Environment=TORSOCKS_ALLOW_INBOUND=1
-#ExecStart=/usr/bin/torsocks /usr/bin/monerod --config-file /etc/monerod.conf \
+#ExecStart=/usr/bin/torsocks /usr/bin/bittubed --config-file /etc/bittubed.conf \
 #    --non-interactive
 
 Restart=always
