--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,6 +1,6 @@
 #define DEF_MONERO_VERSION_TAG "@VERSIONTAG@"
-#define DEF_MONERO_VERSION "0.12.0.0-master"
-#define DEF_MONERO_RELEASE_NAME "Lithium Luna"
+#define DEF_MONERO_VERSION "2.0.0.0-master"
+#define DEF_MONERO_RELEASE_NAME "Titanium Tube"
 #define DEF_MONERO_VERSION_FULL DEF_MONERO_VERSION "-" DEF_MONERO_VERSION_TAG
 
 #include "version.h"
