--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -113,19 +113,23 @@ add_subdirectory(cryptonote_core)
 add_subdirectory(lmdb)
 add_subdirectory(multisig)
 add_subdirectory(net)
-add_subdirectory(blockchain_db)
+if(NOT IOS)
+  add_subdirectory(blockchain_db)
+endif()
 add_subdirectory(mnemonics)
-add_subdirectory(serialization)
-add_subdirectory(rpc)
+if(NOT IOS)
+  add_subdirectory(rpc)
+  add_subdirectory(serialization)
+endif()
 add_subdirectory(wallet)
 if(NOT IOS)
   add_subdirectory(p2p)
 endif()
 add_subdirectory(cryptonote_protocol)
-add_subdirectory(daemonizer)
 if(NOT IOS)
   add_subdirectory(simplewallet)
   add_subdirectory(gen_multisig)
+  add_subdirectory(daemonizer)
   add_subdirectory(daemon)
   add_subdirectory(blockchain_utilities)
 endif()
