--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -124,6 +124,7 @@ add_subdirectory(daemonizer)
 if(NOT IOS)
   add_subdirectory(simplewallet)
   add_subdirectory(gen_multisig)
+  add_subdirectory(gen_staking)
   add_subdirectory(daemon)
   add_subdirectory(blockchain_utilities)
 endif()
