--- a/contrib/snap/bittubed.conf
+++ b/contrib/snap/bittubed.conf
@@ -1,8 +1,9 @@
 # Configuration for bittubed
 # Syntax: any command line option may be specified as 'clioptionname=value'.
+#         Boolean options such as 'no-igd' are specified as 'no-igd=1'.
 # See 'bittubed --help' for all available options.
 
-# Overrided by snap:
+# Overridden by snap:
 # data-dir=/var/lib/bittube
 # log-file=/var/log/bittube/bittube.log
 
