--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,13 +1,19 @@
-name: C/C++ CI
+name: Build-Linux
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  build:
-
+  build-ubuntu:
+ 
     runs-on: ubuntu-latest
-    
+ 
     steps:
     - uses: actions/checkout@v1
-    - name: make
-      run: make -j3
+      with:
+        submodules: true
+    - name: update apt
+      run: sudo apt update
+    - name: install monero dependencies
+      run: sudo apt -y install build-essential cmake libboost-all-dev miniupnpc libunbound-dev graphviz doxygen libunwind8-dev pkg-config libssl-dev libzmq3-dev libsodium-dev libhidapi-dev libnorm-dev libusb-1.0-0-dev libpgm-dev
+    - name: build
+      run: mkdir build && cd build && cmake -D CMAKE_BUILD_TYPE=Release .. && make daemon simplewallet
