--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,10 +1,9 @@
 name: bittube
 version: 0.11.1.0-1
-summary: "Monero: the secure, private, untraceable cryptocurrency https://bittube.app"
+summary: "BitTube is a revolutionary video platform in which publishers can make money with their content, without ads. https://coin.bit.tube"
 description: |
-    Monero is a private, secure, untraceable, decentralised digital currency.
-    You are your bank, you control your funds, and nobody can trace your transfers
-    unless you allow them to do so.
+    BitTube coin is a digital cryptocurrency. Initially, at the genesis of the BitTube blockchain, the maximum number of coins minable is set to 1 billion coins.
+    Revenues from co-mining are passed on to the viewers and on to the copyright holders as content is consumed on the platform.
 grade: devel
 confinement: strict
 
