--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -3,16 +3,16 @@ name: master
 on: [push, pull_request]
 
 jobs:
-# build-macos:
-#   runs-on: macOS-latest
-#   steps:
-#   - uses: actions/checkout@v1
-#     with:
-#       submodules: recursive
-#   - name: update brew and install dependencies
-#     run: brew update && brew install boost hidapi zmq libpgm unbound libsodium miniupnpc ldns expat libunwind-headers protobuf
-#   - name: build
-#     run: make -j3
+  build-macos:
+    runs-on: macOS-latest
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: recursive
+    - name: update brew and install dependencies
+      run: brew update && brew install boost hidapi zmq libpgm unbound libsodium miniupnpc ldns expat libunwind-headers protobuf
+    - name: build
+      run: make -j3
 
   build-windows:
     runs-on: windows-latest
